Added Login,Sigup and NotFound pages and also remove bugs from index.css file

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/top.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="keywords" content="xKhanCoach, Altimate Athlete, coaching platform, gym landing page">
+    <meta name="description" content="xKhanCoach is a platform that connects coaches with athletes to help them improve their skills and performance.">
+    <title>xKhanCoach | Altimate Athlete</title>
   </head>
   <body>
     <div id="root"></div>
